SEO: replace em dash in titles; switch to colon; update README with project-specific docs

--- a/public/site-config.json
+++ b/public/site-config.json
@@ -1,6 +1,6 @@
 {
   "site": {
-    "title": "Kotori — Hands-free journaling made simple",
+    "title": "Kotori - Hands-free journaling made simple",
     "description": "A low-stim voice journal that organizes itself. Gentle prompts, eyes-free capture, consent-based sharing, multi-language summaries, and visit-ready weekly exports.",
     "tagline": "You talk. Kotori remembers.",
     "domain": "kotori.io"
