--- a/site-config.json
+++ b/site-config.json
@@ -1,6 +1,6 @@
 {
   "site": {
-    "title": "Kotori - Hands-free journaling made simple",
+    "title": "Kotori: Hands-free journaling made simple",
     "description": "Speak a short update. Kotori turns it into clear, searchable notes you can revisit and share - on your terms.",
     "tagline": "You talk. Kotori remembers.",
     "domain": "kotori.io"
